--- a/backend/docker/local.yml
+++ b/backend/docker/local.yml
@@ -1,16 +1,16 @@
-version: '3'
+version: "3"
 
 volumes:
-  napse_dev_tk_local_postgres_data: {}
-  napse_dev_tk_local_postgres_data_backups: {}
+  napse_dtk_local_postgres_data: {}
+  napse_dtk_local_postgres_data_backups: {}
 
 services:
   django: &django
     build:
       context: ..
       dockerfile: ./compose/local/django/Dockerfile
-    image: napse_dev_tk_local_django
-    container_name: napse_dev_tk_local_django
+    image: napse_dtk_local_django
+    container_name: napse_dtk_local_django
     platform: linux/x86_64
     depends_on:
       - postgres
@@ -30,7 +30,7 @@ services:
 
   traefik:
     image: "traefik:v2.9.5"
-    container_name: traefik
+    container_name: napse_dtk_traefik
     command:
       - "--log.level=DEBUG"
       - "--api.insecure=true"
@@ -51,11 +51,11 @@ services:
     build:
       context: ..
       dockerfile: ./compose/server/postgres/Dockerfile
-    image: napse_dev_tk_local_postgres
-    container_name: napse_dev_tk_local_postgres
+    image: napse_dtk_local_postgres
+    container_name: napse_dtk_local_postgres
     volumes:
-      - napse_dev_tk_local_postgres_data:/var/lib/postgresql/data:Z
-      - napse_dev_tk_local_postgres_data_backups:/backups:z
+      - napse_dtk_local_postgres_data:/var/lib/postgresql/data:Z
+      - napse_dtk_local_postgres_data_backups:/backups:z
     env_file:
       - ../.envs/.local/.postgres
     ports:
@@ -63,12 +63,12 @@ services:
 
   redis:
     image: redis:6
-    container_name: napse_dev_tk_local_redis
+    container_name: napse_dtk_local_redis
 
   celeryworker:
     <<: *django
-    image: napse_dev_tk_local_celeryworker
-    container_name: napse_dev_tk_local_celeryworker
+    image: napse_dtk_local_celeryworker
+    container_name: napse_dtk_local_celeryworker
     depends_on:
       - redis
       - postgres
@@ -80,8 +80,8 @@ services:
 
   celerybeat:
     <<: *django
-    image: napse_dev_tk_local_celerybeat
-    container_name: napse_dev_tk_local_celerybeat
+    image: napse_dtk_local_celerybeat
+    container_name: napse_dtk_local_celerybeat
     depends_on:
       - redis
       - postgres
