--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,42 @@
+amqp==5.1.1
 anyio==3.7.0
 asgiref==3.7.2
 astroid==2.15.5
 asttokens==2.2.1
 backcall==0.2.0
+billiard==4.1.0
 black==23.3.0
 boto3==1.26.160
 botocore==1.29.160
+celery==5.3.1
 certifi==2023.5.7
 cffi==1.15.1
 cfgv==3.3.1
 charset-normalizer==3.1.0
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 Collectfast==2.2.0
 coverage==7.2.7
+cron-descriptor==1.4.0
 cryptography==41.0.0
 decorator==5.1.1
 dill==0.3.6
 distlib==0.3.6
-Django==4.2.2
+Django==4.1.7
 django-anymail==10.0
+django-celery-beat==2.5.0
 django-coverage-plugin==3.0.0
 django-debug-toolbar==4.1.0
 django-ebhealthcheck==2.0.2
 django-environ==0.10.0
+django-extensions==3.2.3
 django-health-check==3.17.0
 django-storages==1.13.2
 django-stubs==4.2.1
 django-stubs-ext==4.2.1
+django-timezone-field==5.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 executing==1.2.0
@@ -36,6 +46,7 @@ filelock==3.12.2
 flake8==6.0.0
 flake8-isort==6.0.0
 gunicorn==20.1.0
+hiredis==2.2.3
 identify==2.5.24
 idna==3.4
 iniconfig==2.0.0
@@ -44,6 +55,7 @@ ipython==8.14.0
 isort==5.12.0
 jedi==0.18.2
 jmespath==1.0.1
+kombu==5.3.1
 lazy-object-proxy==1.9.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
@@ -60,6 +72,7 @@ platformdirs==3.8.0
 pluggy==1.2.0
 pre-commit==3.3.3
 prompt-toolkit==3.0.38
+psycopg2-binary==2.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.10.0
@@ -74,9 +87,11 @@ pylint-plugin-utils==0.8.2
 pytest==7.4.0
 pytest-django==4.5.2
 pytest-sugar==0.9.7
+python-crontab==2.7.1
 python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0
+redis==4.5.5
 requests==2.31.0
 s3transfer==0.6.1
 six==1.16.0
@@ -89,7 +104,9 @@ traitlets==5.9.0
 types-pytz==2023.3.0.0
 types-PyYAML==6.0.12.10
 typing_extensions==4.6.3
+tzdata==2023.3
 urllib3==1.26.16
+vine==5.0.0
 virtualenv==20.23.1
 watchfiles==0.19.0
 wcwidth==0.2.6
