--- a/backend/docker/compose/server/django/Dockerfile
+++ b/backend/docker/compose/server/django/Dockerfile
@@ -1,19 +1,24 @@
 ARG PYTHON_VERSION=3.11-slim-bullseye
 
+
+
 # define an alias for the specfic python version used in this file.
 FROM python:${PYTHON_VERSION} as python
 
 # Python build stage
 FROM python as python-build-stage
 
-ARG BUILD_ENVIRONMENT=local
+ARG BUILD_ENVIRONMENT=server
 
 # Install apt packages
 RUN apt-get update && apt-get install --no-install-recommends -y \
   # dependencies for building Python packages
   build-essential \
   # psycopg2 dependencies
-  libpq-dev
+  libpq-dev \
+  sqlcipher libsqlcipher0 libsqlcipher-dev \
+  # installing libs for bitcoinlib
+  libgmp3-dev sqlcipher libsqlcipher0 libsqlcipher-dev
 
 # Requirements are installed here to ensure they will be cached.
 COPY ./requirements .
@@ -26,7 +31,7 @@ RUN pip wheel --wheel-dir /usr/src/app/wheels  \
 # Python 'run' stage
 FROM python as python-run-stage
 
-ARG BUILD_ENVIRONMENT=local
+ARG BUILD_ENVIRONMENT=server
 ARG APP_HOME=/app
 
 ENV PYTHONUNBUFFERED 1
@@ -35,16 +40,21 @@ ENV BUILD_ENV ${BUILD_ENVIRONMENT}
 
 WORKDIR ${APP_HOME}
 
+RUN addgroup --system django \
+    && adduser --system --ingroup django django
+
+
 # Install required system dependencies
 RUN apt-get update && apt-get install --no-install-recommends -y \
   # psycopg2 dependencies
   libpq-dev \
   # Translations dependencies
   gettext \
+  # installing libs for bitcoinlib
+  libgmp3-dev sqlcipher libsqlcipher0 libsqlcipher-dev \
   # cleaning up unused files
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
-
 
 # All absolute dir copies ignore workdir instruction. All relative dir copies are wrt to the workdir instruction
 # copy python dependency wheels from python-build-stage
@@ -52,30 +62,41 @@ COPY --from=python-build-stage /usr/src/app/wheels  /wheels/
 
 # use wheels to install python dependencies
 RUN pip install --no-cache-dir --no-index --find-links=/wheels/ /wheels/* \
-	&& rm -rf /wheels/
+  && rm -rf /wheels/
 
-COPY ./compose/local/django/entrypoint /entrypoint
+
+COPY --chown=django:django ./docker/compose/server/django/entrypoint /entrypoint
 RUN sed -i 's/\r$//g' /entrypoint
 RUN chmod +x /entrypoint
 
-COPY ./compose/local/django/start /start
+
+COPY --chown=django:django ./docker/compose/server/django/start /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
-
-COPY ./compose/wait-for-it.sh /wait-for-it.sh
-RUN sed -i 's/\r$//g' /wait-for-it.sh
-RUN chmod +x /wait-for-it.sh
-
-COPY ./compose/local/django/celery/worker/start /start-celeryworker
+COPY --chown=django:django ./docker/compose/server/django/celery/worker/start /start-celeryworker
 RUN sed -i 's/\r$//g' /start-celeryworker
 RUN chmod +x /start-celeryworker
 
-COPY ./compose/local/django/celery/beat/start /start-celerybeat
+
+COPY --chown=django:django ./docker/compose/server/django/celery/beat/start /start-celerybeat
 RUN sed -i 's/\r$//g' /start-celerybeat
 RUN chmod +x /start-celerybeat
 
 
+COPY ./docker/compose/server/django/celery/flower/start /start-flower
+RUN sed -i 's/\r$//g' /start-flower
+RUN chmod +x /start-flower
+
+COPY ./docker/compose/wait-for-it.sh /wait-for-it.sh
+RUN sed -i 's/\r$//g' /wait-for-it.sh
+RUN chmod +x /wait-for-it.sh
+
 # copy application code to WORKDIR
-COPY . ${APP_HOME}
+COPY --chown=django:django . ${APP_HOME}
+
+# make django owner of the WORKDIR directory as well.
+RUN chown django:django ${APP_HOME}
+
+USER django
 
 ENTRYPOINT ["/entrypoint"]
