--- a/backend/docker/compose/development/django/Dockerfile
+++ b/backend/docker/compose/development/django/Dockerfile
@@ -55,23 +55,23 @@ RUN pip install --no-cache-dir --no-index --find-links=/wheels/ /wheels/* \
 
 
 # Commands
-COPY ./docker/compose/django/start /start
+COPY ./docker/compose/development/django/start /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
 
-COPY ./docker/compose/django/entrypoint /entrypoint
+COPY ./docker/compose/development/django/entrypoint /entrypoint
 RUN sed -i 's/\r$//g' /entrypoint
 RUN chmod +x /entrypoint
 
-# COPY ./compose/wait-for-it.sh /wait-for-it.sh
-# RUN sed -i 's/\r$//g' /wait-for-it.sh
-# RUN chmod +x /wait-for-it.sh
+COPY ./docker/wait-for-it.sh /wait-for-it.sh
+RUN sed -i 's/\r$//g' /wait-for-it.sh
+RUN chmod +x /wait-for-it.sh
 
-COPY ./compose/local/django/celery/worker/start /start-celeryworker
+COPY ./docker/compose/development/django/celery/worker/start /start-celeryworker
 RUN sed -i 's/\r$//g' /start-celeryworker
 RUN chmod +x /start-celeryworker
 
-COPY ./compose/local/django/celery/beat/start /start-celerybeat
+COPY ./docker/compose/development/django/celery/beat/start /start-celerybeat
 RUN sed -i 's/\r$//g' /start-celerybeat
 RUN chmod +x /start-celerybeat
 
