--- a/backend/docker/dev_as_prod.yml
+++ b/backend/docker/dev_as_prod.yml
@@ -22,23 +22,6 @@ services:
     expose:
       - "8000"
 
-  traefik:
-    image: "traefik:v2.9.5"
-    command:
-      - "--log.level=INFO"
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-    ports:
-      - "80:80"
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-
-  redis:
-    image: redis:6
-    container_name: napse_dtk_prod_redis
-
   celeryworker:
     <<: *django
     image: napse_dtk_prod_celeryworker
@@ -63,3 +46,31 @@ services:
     labels:
       - "traefik.enable=false"
 
+  flower:
+    <<: *django
+    image: napse_dtk_prod_flower
+    container_name: napse_dtk_prod_flower
+    command: /start-flower
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.flower.rule=Host(`localhost`)"
+      - "traefik.http.routers.flower.entrypoints=flower"
+    expose:
+      - "5555"
+
+   traefik:
+    image: "traefik:v2.9.5"
+    command:
+      - "--log.level=INFO"
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+    ports:
+      - "80:80"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+
+  redis:
+    image: redis:6
+    container_name: napse_dtk_prod_redis
