--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,9 +14,7 @@ jobs:
 
   build:
     name: Django build
-    needs:
-      - start-runner # required to start the main job when the runner is ready
-    runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
+    runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
 
