--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-          architecture: "x64"
+          # architecture: "x64"
 
       - name: Install dependencies
         run: |
@@ -47,7 +47,7 @@ jobs:
       - name: Tests and coverage
         run: |
           coverage run ./backend/manage.py test -v2 --keepdb && coverage html
-
+      
       - name: Coverage value 
         run: |
           cvg_result=$(coverage report --skip-covered | head -n -2 | tail -n 1 | awk '{print $NF}' | sed 's/%//')
