--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,7 +1,8 @@
 name: Django CI
 
 on:
-  pull_request_target:
+  # pull_request_target:
+  pull_request:
 
 jobs:
   authorize:
@@ -25,33 +26,18 @@ jobs:
       - name: Start containers
         run: docker compose -f ./backend/docker/development.yml up --build -d
 
-      - name: Set up python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-          # architecture: "x64"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pip-tools
-          pip-compile ./backend/requirements/development.txt --output-file ./full-requirements.txt --resolver=backtracking
-          pip install -r ./full-requirements.txt
-
       - name: Lint with ruff
-        run: |
-          pip install ruff
-          # stop the build if there are Python syntax errors or undefined names
-          ruff .
+        run: ruff .
 
       - name: Tests and coverage
         run: |
-          coverage run ./backend/manage.py test -v2 --keepdb && coverage html
+          docker exec napse_dtk_dev_django coverage run ./manage.py test -v2 --keepdb && coverage html
+          # coverage run ./backend/manage.py test -v2 --keepdb && coverage html
       
       - name: Coverage value 
         run: |
-          cvg_result=$(coverage report --skip-covered | head -n -2 | tail -n 1 | awk '{print $NF}' | sed 's/%//')
-          echo "COVERAGE=$cvg_result" >> $GITHUB_ENV
+          docker exec napse_dtk_dev_django cvg_result=$(coverage report --skip-covered | head -n -2 | tail -n 1 | awk '{print $NF}' | sed 's/%//')
+          docker exec napse_dtk_dev_django echo "COVERAGE=$cvg_result" >> $GITHUB_ENV
 
       - name: Coverage badge
         if: ${{ github.base_ref == 'main' }} 
