--- a/.github/workflows/check_no_open_pr.yml
+++ b/.github/workflows/check_no_open_pr.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: List open PRs based on the same branch
         id: list_prs
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           BRANCH_NAME=${{ github.head_ref }}
 
