--- a/.github/workflows/check_no_open_pr.yml
+++ b/.github/workflows/check_no_open_pr.yml
@@ -25,7 +25,7 @@ jobs:
           REPO_NAME=${{ github.repository }}
 
           # Get the list of open PRs from the same branch
-          PR_LIST=$(gh pr list --repo $REPO_NAME --base $BRANCH_NAME)
+          PR_LIST=$(gh pr list --repo $REPO_NAME --head $BRANCH_NAME)
 
           echo "PR_LIST=$PR_LIST"
           # echo "PR_LIST=$(hub pr list -f %I -s open -b $BRANCH_NAME)" >> $GITHUB_ENV
