--- a/.github/workflows/check_no_open_pr.yml
+++ b/.github/workflows/check_no_open_pr.yml
@@ -10,10 +10,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Get current branch name
-        id: get_branch
-        run: echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-
       - name: List open PRs based on the same branch
         id: list_prs
         env:
@@ -21,35 +17,17 @@ jobs:
         run: |
           BRANCH_NAME=${{ github.head_ref }}
 
-          # Get the name of the repository from which the PR was opened
           REPO_NAME=${{ github.repository }}
 
-          # Get the list of open PRs from the same branch
           PR_LIST=$(gh pr list --repo $REPO_NAME --head $BRANCH_NAME)
+
           PR_COUNT=$(echo "$PR_LIST" | wc -l)
-          echo "Number of open PRs: $PR_COUNT"
-          echo "PR_LIST=$PR_LIST"
-          # echo "PR_LIST=$(hub pr list -f %I -s open -b $BRANCH_NAME)" >> $GITHUB_ENV
+          echo $PR_COUNT >> $GITHUB_ENV
 
-      - name: Wait for other PRs to finish
-        id: wait_for_prs
+      - name: Fail if there are more than one PRs open
+        id: fail_multiple_prs
         run: |
-          PR_IDS=$PR_LIST
-          echo "PR_IDS=$PR_IDS" 
-          while [ ! -z "$PR_IDS" ]; do
-            PR_IDS_ARR=($PR_IDS)
-            echo "PR_IDS_ARR=${PR_IDS_ARR}"
-            for PR_ID in "${PR_IDS_ARR[@]}"; do
-              PR_STATUS=$(hub pr view $PR_ID -f %s)
-              echo "PR_STATUS=$PR_STATUS"
-              if [ "$PR_STATUS" == "closed" ]; then
-                PR_IDS=${PR_IDS/$PR_ID/}
-                echo "PR_IDS2=$PR_IDS"
-              fi
-            done
-            sleep 60 # Adjust the polling interval if needed
-          done
-
-      - name: Run your tests or checks
-        run: |
-          # Run your tests, checks, or build steps here
+          if [ $PR_COUNT -gt 1 ]; then
+            echo "There are $PR_COUNT open PRs from the same branch. Please close them before merging this PR."
+            exit 1
+          fi
