--- a/.github/workflows/check_no_open_pr.yml
+++ b/.github/workflows/check_no_open_pr.yml
@@ -1,6 +1,6 @@
 name: Cross-PR Checks
 on:
-  pull_request_target:
+  pull_request:
 
 jobs:
   check_cross_prs:
@@ -26,6 +26,7 @@ jobs:
 
       - name: Fail if there are more than one PRs open
         id: fail_multiple_prs
+
         run: |
           if [ $PR_COUNT -gt 1 ]; then
             echo "There are $PR_COUNT open PRs from the same branch. Please close them before merging this PR."
