--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,10 +3,12 @@ updates:
 
   - package-ecosystem: "github-actions"
     directory: "/"
+    target-branch: "dev"
     schedule:
       interval: "daily"
 
   - package-ecosystem: "pip"
     directory: "/backend/requirements/"
+    target-branch: "dev"
     schedule:
       interval: "daily"
