--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -15,6 +15,7 @@ jobs:
     needs: authorize
     timeout-minutes: 30
     runs-on: ubuntu-latest
+    environment: ${{ github.event.pull_request.head.repo.full_name != github.repository && 'external' || 'internal' }}
     strategy:
       max-parallel: 4
 
