--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha || github.ref }}
-      
+
       - name: Start containers
         run: docker compose -f ./backend/docker/development.yml up --build -d
 
@@ -34,16 +34,15 @@ jobs:
 
       - name: Tests and coverage
         run: |
-          docker exec napse_dtk_dev_django coverage run ./manage.py test -v2 --keepdb && docker exec napse_dtk_dev_django coverage html
-          # coverage run ./backend/manage.py test -v2 --keepdb && coverage html
-      
-      - name: Coverage value 
+          make coverage
+
+      - name: Coverage value
         run: |
           cvg_result=$(docker exec napse_dtk_dev_django coverage report --skip-covered | head -n -2 | tail -n 1 | awk '{print $NF}' | sed 's/%//') 
           echo "COVERAGE=$cvg_result" >> $GITHUB_ENV
 
       - name: Coverage badge
-        if: ${{ github.base_ref == 'main' }} 
+        if: ${{ github.base_ref == 'main' }}
         uses: Schneegans/dynamic-badges-action@v1.6.0
         env:
           COVERAGE: ${{ env.COVERAGE }}
@@ -52,7 +51,7 @@ jobs:
           gistID: 40fac957532fe3b731c99067467de842
           filename: napse-developer-toolkit-coverage.json
           label: Coverage
-          message: ${{ env.COVERAGE }}% 
+          message: ${{ env.COVERAGE }}%
           valColorRange: ${{ env.COVERAGE }}
           minColorRange: 60
           maxColorRange: 100
