--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -63,4 +63,4 @@ jobs:
 
       - name: Stop containers
         if: always()
-        run: docker compose -f ./backend/docker/development.yml down
+        run: make down
