fix(ci): workflow

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -37,8 +37,7 @@ jobs:
           ruff .
 
       - name: Tests and coverage
-        run: |
-          make coverage
+        run: make coverage
 
       - name: Coverage value
         run: |
