--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -36,11 +36,14 @@ jobs:
           pip install ruff
           ruff .
 
-      - name: Tests and coverage
+      - name: Tests and coverage 1
         run: |
-          # make coverage
-          docker exec napse_dtk_dev_django coverage run manage.py test -v2 --keepdb 
+          docker exec napse_dtk_dev_django coverage run manage.py test -v2 --keepdb
+      - name: Tests and coverage 2
+        run: |
           docker exec napse_dtk_dev_django coverage html
+      - name: Tests and coverage 3
+        run: |
           docker exec napse_dtk_dev_django coverage report
 
       - name: Coverage value
