--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,10 +23,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha || github.ref }}
-      - name: Litestream
-        run: |
-          make up IMAGE=litestream
-          make down IMAGE=litestream
+      # - name: Litestream
+      #   run: |
+      #     make up IMAGE=litestream
+      #     make down IMAGE=litestream
 
       - name: Start containers
         run: make up
