--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Litestream
         run: |
+          make down
           make up IMAGE=litestream
           make down IMAGE=litestream
 
