--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,7 +2,7 @@ name: Django CI
 
 on:
   workflow_run:
-    workflows: ["check_no_changes_workflows", "check_no_open_pr", "check_PR_source_branch"]
+    workflows: ["Check Source Branch", "Check Workflow Files Changes", "Cross-PR Checks"]
     types:
       - completed
 
