--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -3,7 +3,7 @@ name: Django CI
 on:
   # pull_request_target:
   workflow_run:
-    workflows: [Check branches, Check Cross PRs, Check changes]
+    workflows: [Check Workflow Files Changes, Check Source Branch, Cross-PR Checks]
     types:
       - completed
 jobs:
