test modify workflow

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,6 +7,11 @@ on:
     types:
       - completed
 jobs:
+  on-success:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    steps:
+      - run: echo 'The triggering workflow passed'
   authorize:
     environment: ${{ github.event.pull_request.head.repo.full_name != github.repository && 'external' || 'internal' }}
     runs-on: ubuntu-latest
