--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,14 +27,13 @@ jobs:
       - name: Start containers
         run: make up
 
+      - name: Tests and coverage
+        run: make coverage
+
       - name: Lint with ruff
         run: |
           pip install ruff
           ruff .
-
-      - name: Tests and coverage
-        run: |
-          make coverage
 
       - name: Coverage value
         run: |
