--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,26 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+
       - name: build
         run: make build
-        
-    
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Tag Docker image
+        run: |
+          docker ps -a
+          echo "$(echo ${{ github.sha }})" > version.txt
+          docker tag local-image:tag ghcr.io/${{ github.repository }}/local-image:$(cat version.txt)
+
+      - name: Push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository }}/local-image:$(cat version.txt)
