--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,6 @@ jobs:
       - name: build
         run: | 
           make build
-          docker ps -a
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
@@ -30,7 +29,7 @@ jobs:
 
       - name: Tag Docker image
         run: |
-          docker ps -a
+          docker image ls
           echo "$(echo ${{ github.sha }})" > version.txt
           docker tag local-image:tag ghcr.io/${{ github.repository }}/local-image:$(cat version.txt)
 
