--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,9 +38,16 @@ jobs:
           docker tag napse_dtk_prod_django ghcr.io/${{ github.repository }}/napse_dtk_prod_django:$(cat version.txt)
 
 
-      - name: Push Docker image
+      - name: Push LiteStream image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}/local-image:$(cat version.txt)
+          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_litestream:$(cat version.txt)
+        
+      - name: Push Django image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_django:$(cat version.txt)
