--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,10 @@ jobs:
           docker image ls
           TAG_NAME=$(grep -oP '(?<=## \[)[^\]]+' CHANGELOG.md | head -n 1)
           VERSION=v$TAG_NAME
-          echo "${VERSION}$(echo ${{ github.sha }})" > version.txt
+          echo "VERSION=${VERSION}$(echo ${{ github.sha }})" >> $GITHUB_ENV
 
-          docker tag napse_dtk_prod_litestream ghcr.io/${{ github.repository }}/napse_dtk_prod_litestream:$(cat version.txt)
-          docker tag napse_dtk_prod_django ghcr.io/${{ github.repository }}/napse_dtk_prod_django:$(cat version.txt)
+          docker tag napse_dtk_prod_litestream ghcr.io/${{ github.repository }}/napse_dtk_prod_litestream:$VERSION
+          docker tag napse_dtk_prod_django ghcr.io/${{ github.repository }}/napse_dtk_prod_django:$VERSION
 
 
       - name: Push LiteStream image
@@ -43,11 +43,11 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_litestream:$(cat version.txt)
+          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_litestream:$VERSION
         
       - name: Push Django image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_django:$(cat version.txt)
+          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_django:$VERSION
