--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,11 +43,11 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_litestream:$VERSION
+          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_litestream:${{ env.VERSION }}
         
       - name: Push Django image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_django:$VERSION
+          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_django:${{ env.VERSION }}
