--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,26 +32,9 @@ jobs:
           docker image ls
           TAG_NAME=$(grep -oP '(?<=## \[)[^\]]+' CHANGELOG.md | head -n 1)
           VERSION=v$TAG_NAME
-          echo "VERSION=${VERSION}$(echo ${{ github.sha }})" >> $GITHUB_ENV
 
           docker tag napse_dtk_prod_litestream ghcr.io/${{ github.repository }}/napse_dtk_prod_litestream:$VERSION
           docker tag napse_dtk_prod_django ghcr.io/${{ github.repository }}/napse_dtk_prod_django:$VERSION
 
-
-      - name: Push LiteStream image
-        uses: docker/build-push-action@v2
-        env:
-          VERSION: ${{ env.VERSION }}
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_litestream:${{ env.VERSION }}
-        
-      - name: Push Django image
-        uses: docker/build-push-action@v2
-        env:
-          VERSION: ${{ env.VERSION }}
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ github.repository }}/napse_dtk_prod_django:${{ env.VERSION }}
+          docker push ghcr.io/${{ github.repository }}/napse_dtk_prod_litestream:$VERSION
+          docker push ghcr.io/${{ github.repository }}/napse_dtk_prod_django:$VERSION
