--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           docker image ls
           TAG_NAME=$(grep -oP '(?<=## \[)[^\]]+' CHANGELOG.md | head -n 1)
+          echo "Tagging with $TAG_NAME"
           VERSION=v$TAG_NAME
 
           docker tag napse_dtk_prod_litestream ghcr.io/${{ github.repository }}/napse_dtk_prod_litestream:$VERSION
